--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "apollo-cache-inmemory": "^1.2.5",
     "apollo-client": "^2.3.5",
     "apollo-link-http": "^1.5.4",
+    "dotenv-webpack": "^1.5.7",
+    "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "vue": "^2.5.11",
     "vue-apollo": "^3.0.0-beta.19",
